@@ -10,9 +10,8 @@ import org.jetbrains.jps.dependency.ReferenceID;
 import org.jetbrains.jps.dependency.java.*;
 import org.jetbrains.jps.javac.Iterators;
 
-import java.util.Collections;
 import java.util.EnumSet;
-import java.util.Objects;
+import java.util.List;
 
 import static org.jetbrains.jps.javac.Iterators.*;
 
@@ -30,16 +29,21 @@ final class KJvmUtils {
 
   static Iterable<KmFunction> allKmFunctions(Node<?, ?> node) {
     KotlinMeta meta = getKotlinMeta(node);
-    return meta != null? meta.getKmFunctions() : Collections.emptyList();
+    return meta == null ? List.of() : meta.getKmFunctions();
   }
 
   static Iterable<KmProperty> allKmProperties(Node<?, ?> node) {
     KotlinMeta meta = getKotlinMeta(node);
-    return meta != null? meta.getKmProperties() : Collections.emptyList();
+    return meta == null ? List.of() : meta.getKmProperties();
   }
 
   static @Nullable String getKotlinName(JvmNodeReferenceID cls, Utils utils) {
-    return find(map(utils.getNodes(cls, JvmClass.class), c -> getKotlinName(c)), Objects::nonNull);
+    for (String o : map(utils.getNodes(cls, JvmClass.class), c -> getKotlinName(c))) {
+      if (o != null) {
+        return o;
+      }
+    }
+    return null;
   }
 
   static @Nullable String getKotlinName(JvmClass cls) {
@@ -51,6 +55,18 @@ final class KJvmUtils {
       return ((KmClass)container).getName().replace('.', '/');
     }
     return null;
+  }
+
+  static @Nullable String getKotlinNameByContainer(JvmClass aClass, KmDeclarationContainer container) {
+    if (container instanceof KmPackage) {
+      return aClass.getPackageName();
+    }
+    else if (container instanceof KmClass) {
+      return ((KmClass)container).getName().replace('.', '/');
+    }
+    else {
+      return null;
+    }
   }
 
   static String getMethodKotlinName(JvmClass cls, JvmMethod method) {
@@ -76,12 +92,17 @@ final class KJvmUtils {
   }
 
   static boolean isDeclaresDefaultValue(KmFunction f) {
-    return find(f.getValueParameters(), Attributes::getDeclaresDefaultValue) != null;
+    for (KmValueParameter o : f.getValueParameters()) {
+      if (Attributes.getDeclaresDefaultValue(o)) {
+        return true;
+      }
+    }
+    return false;
   }
 
-  static KmDeclarationContainer getDeclarationContainer(Node<?, ?> node) {
+  static @Nullable KmDeclarationContainer getDeclarationContainer(Node<?, ?> node) {
     KotlinMeta meta = getKotlinMeta(node);
-    return meta != null? meta.getDeclarationContainer() : null;
+    return meta == null ? null : meta.getDeclarationContainer();
   }
 
   static boolean isKotlinNode(Node<?, ?> node) {
@@ -89,7 +110,15 @@ final class KJvmUtils {
   }
 
   static @Nullable KotlinMeta getKotlinMeta(Node<?, ?> node) {
-    return node instanceof JVMClassNode? (KotlinMeta)find(((JVMClassNode<?, ?>)node).getMetadata(), mt -> mt instanceof KotlinMeta) : null;
+    if (!(node instanceof JVMClassNode)) {
+      return null;
+    }
+    for (JvmMetadata<?, ?> o : ((JVMClassNode<?, ?>)node).getMetadata()) {
+      if (o instanceof KotlinMeta) {
+        return (KotlinMeta)o;
+      }
+    }
+    return null;
   }
 
   static boolean isPrivate(KmProperty prop) {
@@ -110,7 +139,7 @@ final class KJvmUtils {
 
   static Iterable<ReferenceID> withAllSubclassesIfSealed(Utils utils, ReferenceID sealedClassId) {
     Iterators.Function<ReferenceID, Iterable<? extends ReferenceID>> withSubclassesIfSealed =
-      id -> flat(map(utils.getNodes(id, JvmClass.class), n -> isSealed(n)? utils.directSubclasses(n.getReferenceID()) : Collections.emptyList()));
+      id -> flat(map(utils.getNodes(id, JvmClass.class), n -> isSealed(n)? utils.directSubclasses(n.getReferenceID()) : List.of()));
     return recurse(sealedClassId, withSubclassesIfSealed, true);
   }
 }
